infra/k8s/client-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client # which pods are needs to managed
  template:
    metadata:
      labels: # matchLabels created here, we can use any name instead of app.
        app: client
    spec:
      containers:
        - name: client
          image: vivvk/client:latest
          imagePullPolicy: Never
--- # for multiple objects
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
