infra/k8s/moderation-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation # which pods are needs to managed
  template:
    metadata:
      labels: # matchLabels created here, we can use any name instead of app.
        app: moderation
    spec:
      containers:
        - name: moderation
          image: vivvk/moderation:latest
          imagePullPolicy: Never
--- # for multiple objects
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
