infra/k8s/posts-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts # which pods are needs to managed
  template:
    metadata:
      labels: # matchLabels created here, we can use any name instead of app.
        app: posts
    spec:
      containers:
        - name: posts
          image: vivvk/posts:latest
          imagePullPolicy: Never
--- # for multiple objects
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 3000
      targetPort: 3000
