infra/k8s/posts-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts # created the label in posts-depl.yml file.
  ports:
    - name: posts
      protocol: TCP
      port: 3000
      targetPort: 3000
